{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 30,
  "lineage": "581024ed-b17e-d2b3-71e2-8d9dba35c46f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "EIP_A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Instance_A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "GW_nimesa",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:409820673187:internet-gateway/igw-03a6d13d84a6322f9",
            "id": "igw-03a6d13d84a6322f9",
            "owner_id": "409820673187",
            "tags": {
              "Name": "IG_nimesa"
            },
            "tags_all": {
              "Name": "IG_nimesa"
            },
            "vpc_id": "vpc-0c2335065fec055d6"
          },
          "dependencies": [
            "aws_vpc.A"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "ENI_A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:409820673187:network-interface/eni-0494ded210d6d25c4",
            "id": "eni-0494ded210d6d25c4",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "0e:f0:34:67:09:03",
            "owner_id": "409820673187",
            "private_ip": "10.0.0.10",
            "private_ip_list": [
              "10.0.0.10"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.0.10"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-06f7c9530b2bc1e44"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-011556ad863e605f0"
          },
          "dependencies": [
            "aws_internet_gateway.GW_nimesa",
            "aws_security_group.SG_nimesa",
            "aws_subnet.Subnet_nimesa",
            "aws_vpc.A"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "RT_nimesa",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:409820673187:route-table/rtb-092ecabd2ceeb7a66",
            "id": "rtb-092ecabd2ceeb7a66",
            "owner_id": "409820673187",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03a6d13d84a6322f9",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03a6d13d84a6322f9",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "RT_nimesa"
            },
            "tags_all": {
              "Name": "RT_nimesa"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c2335065fec055d6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.GW_nimesa",
            "aws_vpc.A"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "RT_to_Subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fe8c657868b2fdb1",
            "route_table_id": "rtb-092ecabd2ceeb7a66",
            "subnet_id": "subnet-011556ad863e605f0"
          },
          "dependencies": [
            "aws_internet_gateway.GW_nimesa",
            "aws_route_table.RT_nimesa",
            "aws_subnet.Subnet_nimesa",
            "aws_vpc.A"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "SG_nimesa",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:409820673187:security-group/sg-06f7c9530b2bc1e44",
            "description": "Allow SSH, HTTP, HTTPS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06f7c9530b2bc1e44",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "SG_nimesa",
            "name_prefix": "",
            "owner_id": "409820673187",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG_nimesa"
            },
            "tags_all": {
              "Name": "SG_nimesa"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c2335065fec055d6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.A"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Subnet_nimesa",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:409820673187:subnet/subnet-011556ad863e605f0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-011556ad863e605f0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "409820673187",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet_nimesa"
            },
            "tags_all": {
              "Name": "Subnet_nimesa"
            },
            "vpc_id": "vpc-0c2335065fec055d6"
          },
          "dependencies": [
            "aws_internet_gateway.GW_nimesa",
            "aws_vpc.A"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:409820673187:vpc/vpc-0c2335065fec055d6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a3c181c19af70b56",
            "default_route_table_id": "rtb-01a2635aaab873426",
            "default_security_group_id": "sg-03fbb77993ed3f6fd",
            "dhcp_options_id": "dopt-033eaaf7dae423d6d",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c2335065fec055d6",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01a2635aaab873426",
            "owner_id": "409820673187",
            "tags": {
              "name": "nimesa"
            },
            "tags_all": {
              "name": "nimesa"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:409820673187:vpc-endpoint/vpce-0636c5d530e0fa44a",
            "cidr_blocks": [
              "16.182.0.0/16",
              "18.34.0.0/19",
              "52.216.0.0/15",
              "54.231.0.0/16",
              "3.5.0.0/19",
              "18.34.232.0/21"
            ],
            "id": "vpce-0636c5d530e0fa44a",
            "owner_id": "409820673187",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-63a5400a",
            "private_dns_enabled": false,
            "requester_managed": false,
            "service_name": "com.amazonaws.us-east-1.s3",
            "state": "available",
            "tags": {
              "Name": "test"
            },
            "tags_all": {
              "Name": "test"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0c2335065fec055d6"
          },
          "dependencies": [
            "aws_vpc.A"
          ]
        }
      ]
    }
  ]
}